kubernetes/darkstar/apps/flux-system/flux-operator/instance/github/webhooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-receiver-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.${SECRET_DOMAIN}
spec:
  ingressClassName: ingress-nginx-ext
  rules:
    - host: &host "flux.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
